--- a/public/index.html
+++ b/public/index.html
@@ -1,46 +1,56 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Chat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.min.css'><link rel="stylesheet" href="./style.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <link rel='stylesheet'
+    href='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.min.css'>
+  <link rel="stylesheet" href="./style.css">
 
 </head>
+
 <body>
-<section class="avenue-messenger">
-  <div class="menu">
-   <div class="items"><span>
-     <a href="#" title="Minimize">&mdash;</a><br>
-<!--     
+  <section class="avenue-messenger">
+    <div class="menu">
+      <div class="items"><span>
+          <a href="#" title="Minimize">&mdash;</a><br>
+          <!--     
      <a href="">enter email</a><br>
      <a href="">email transcript</a><br>-->
-     <a href="#" title="End Chat">&#10005;</a>
-     
-     </span></div>
-    <div class="button">...</div>
-  </div>
-  <div class="agent-face">
-    <div class="half">
-     <img class="agent circle" src="" alt="User Image"></div>
-  </div>
-<div class="chat">
-  <div class="chat-title">
-    <h1>Example User</h1>
-    <h2>Example</h2>
-  </div>
-  <div class="messages">
-    <div class="messages-content"></div>
-  </div>
-  <div class="message-box">
-    <textarea type="text" class="message-input" placeholder="Type message..."></textarea>
-    <button type="submit" class="message-submit">Send</button>
-  </div>
-</div>
-  </div>
-  <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.concat.min.js'></script><script  src="./script.js"></script>
+          <a href="#" title="End Chat">&#10005;</a>
+
+        </span></div>
+      <div class="button">...</div>
+    </div>
+    <div class="agent-face">
+      <div class="half">
+        <img class="agent circle" src="" alt="User Image">
+      </div>
+    </div>
+    <div class="chat">
+      <div class="chat-title">
+        <h1>Example User</h1>
+        <h2>Example</h2>
+      </div>
+      <div class="messages">
+        <div class="messages-content"></div>
+      </div>
+      <div class="message-box">
+        <textarea type="text" class="message-input" placeholder="Type message..."></textarea>
+        <button type="submit" class="message-submit">Send</button>
+      </div>
+    </div>
+    </div>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script
+      src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.concat.min.js'></script>
+    <script src="./script.js"></script>
 
 </body>
+
 </html>
